<resources>
    <string name="app_name">Mobile T1</string>

    <string name="sign_in">Sign in</string>
    <string name="or">Or</string>
    <string name="create_account">Cadastrar</string>
    <string name="create_movie">Cadastro de Filme</string>
    <string name="movie_name">Nome do Filme</string>
    <string name="genero">Gênero</string>
    <string name="year_filme">Ano de Lançamento</string>
    <string name="sinopse">Sinopse</string>
    <string name="link_imdb">Link do Poster</string>
    <string name="diretor">Diretor</string>

    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="you_are_signed_in">You are Signed in</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_movies">Search for movies</string>
    <string name="title_movie">Titulo do Filme</string>
    <string name="check_text_remember_me">Lembre-me</string>
    <string name="title_comments_movie">Comentários</string>
    <string name="enter_your_comment">Coment algo...</string>
    <string name="user_name">Nome do usuário</string>
    <string name="email_user">e-mail</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="data_nasc">Data nascimento</string>

    <string-array name="genero_filme">
        <item>Selecione o Gênero</item>
        <item>Horror</item>
        <item>Comedy</item>
        <item>Music</item>
        <item>Animation</item>
        <item>Thriller</item>
        <item>Action</item>
        <item>Crime</item>
        <item>War</item>
        <item>Drama</item>
        <item>Western</item>
    </string-array>
</resources>