<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.fragments.AddMovieFragment">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".views.SignInActivity"
        android:background="@color/black_primary"
        tools:ignore="Autofill, LabelFor">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/create_movie"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etMovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/movie_name"
                android:padding="17dp"
                android:fontFamily="@font/montserrat"/>

            <EditText
                android:id="@+id/etDiretor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/diretor"
                android:padding="17dp"
                android:fontFamily="@font/montserrat"/>

            <Spinner
                android:id="@+id/etGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/genero"
                android:fontFamily="@font/montserrat"
                android:padding="17dp" />

            <EditText
                android:id="@+id/etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/year_filme"
                android:maxLength="4"
                android:inputType="date"
                android:fontFamily="@font/montserrat"
                android:padding="17dp" />

            <EditText
                android:id="@+id/etSinopse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/sinopse"
                android:inputType="textMultiLine"
                android:fontFamily="@font/montserrat"
                android:padding="17dp" />

            <EditText
                android:id="@+id/etLinkIMDB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/link_imdb"
                android:inputType="textUri"
                android:fontFamily="@font/montserrat"
                android:padding="17dp" />

            <Button
                android:id="@+id/btnCreateMovie"
                android:background="@drawable/button_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/montserrat"
                android:layout_marginVertical="20dp"
                android:text="@string/create_account" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>