<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.EditProfileActivity">

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_margin="10dp"
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_preview" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="55dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="100dp"
            android:id="@+id/image_perfil"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/img_perfil"
                android:scaleType="centerCrop"
                android:src="@drawable/user"
                android:layout_width="151dp"
                android:layout_height="151dp"/>

        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/edit_imag"
            android:layout_marginTop="0dp"
            android:layout_marginStart="220dp"
            android:src="@drawable/editarperfil"
            android:layout_width="45dp"
            android:layout_height="45dp"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_margin="6dp"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_layout"
            android:hint="@string/email_user"
            android:padding="17dp"
            android:fontFamily="@font/montserrat"/>

        <EditText
            android:layout_margin="6dp"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_layout"
            android:hint="@string/user_name"
            android:padding="17dp"
            android:fontFamily="@font/montserrat"/>

        <EditText
            android:layout_margin="6dp"
            android:id="@+id/et_datanasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_layout"
            android:hint="@string/data_nasc"
            android:padding="17dp"
            android:fontFamily="@font/montserrat"/>



        <Button
            android:layout_margin="6dp"
            android:id="@+id/btn_edit_perfil"
            android:background="@drawable/button_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginVertical="20dp"
            android:text="@string/editar_perfil" />

    </LinearLayout>

</LinearLayout>